# pywhy

./: .gitignore  CLAUDE.md  README.md  jupyter_trace_helpers.py  pyproject.toml  test_trace_visualization.py
notebooks/: Instrumentation.ipynb  Trace_Visualization_Demo.ipynb  setup.py
notebooks/.ipynb_checkpoints/: Instrumentation-checkpoint.ipynb
pywhy/: __init__.py  __main__.py  cli.py  events.py  instrumenter.py  questions.py  textual_ui.py  trace_analysis.py  trace_dsl.py  trace_visualization.py  tracer.py  ui.py
tests/: .coverage  README.md  __init__.py  conftest.py  coverage.xml  run_tests.py  test_ast_instrumentation.py  test_cli_integration.py  test_core_tracing.py  test_edge_cases.py  test_instrumentation.py  test_performance.py  test_question_system.py  test_runner.py  test_trace_dsl.py
