[tool.poetry]
authors = ["Lukas Boehme <lukas.boehme@icloud.com>"]
description = "Whyline for Python"
name = "pywhy"
packages = [{include = "pywhy"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.1.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupyterlab-widgets = "^3.0.15"
jupyterlab = "^4.4.5"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
